# Particle-System

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  myMath.h  particle.cpp  particle.h  particleManager.cpp  particleManager.h  stick.cpp  stick.h
Header/: constants.h  myMath.h  particle.h  particleManager.h  physicsManager.h  universe.h
SourceFiles/: main.cpp  particle.cpp  particleManager.cpp  physicsManager.cpp  universe.cpp
